--- a/dictionary.html
+++ b/dictionary.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Python Notes - Datatypes and Operations</title>
+		<title>Python Notes - Hashtables</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,33 +28,130 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Datatypes and Operations</h1>
+										<h1>Hashtables</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+<p>A hashtable is a special data structure that maps keys to values. 
+	A hash table uses a hash function to compute an index, also called a hash code, into an array of buckets or slots, from which the desired value can be found. 
+	During lookup, the key is hashed and the resulting hash indicates where the corresponding value is stored. 
+	Hashtables are especially useful in programming because it is much faster to look up 
+	values in them as compared to other structures like lists or tuples.
+	In this course we'll be exploring two types of hashtables: sets and dictionaries.
+</p>
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+<hr class="major" />
+<h2>Sets</h2>
+<p>Sets can store many datapoints, just like lists and tuples, but 
+	cannot be indexed into because they have no particular order. 
+	Sets can be iterated over, however.
+</p>
+<pre><code>empty_set = set()
+print(empty_set)                     # a set with nothing in it is an empty set
+static_set = {"pepe", "the", "frog"} # we can allocate a set statically like this...
+S = set([1, 2, 3, 4, 5, 1, 1, 3])    # or create it from a list
+print(3 in S)                        # this is True
+print("jesse" in S)                  # this is False
+print("This set has %s elements in it" %len(S))
+S.add(8)                             # this adds 8 to the set
+S.remove(3)                          # this removes 3 from the set
+print(8 in S)                        # True
+print(3 in S)                        # False
+for item in S:
+	print(item)
+</code></pre>
+<p>Note that elements of sets are unique--even though we had three 1's in the original list 
+	in the example above, the set only contains one.
+</p>
+<p>Elements must also be immutable--they can't be changed after being created. 
+	For instance, numbers, booleans, strings, and tuples are all immutable. 
+	Lists are mutable--remember that we can add, remove, or change elements in it.
+</p>
+<pre><code>S = set([1, 2, 3])      # this is fine since the set contains 
+		        # the elements of the list, not the actual list itself
+S = set([[1, 2, 3], 4]) # this is not fine because the list [1, 2, 3] is mutable
+</code></pre>
+<p>Again, sets are very useful because they run fast. 
+	It takes much less time to determine if an element is in a set as compared to a list. 
+</p>
+<p>Say we want to find the repeat elements of a list. 
+	We could loop through and record all elements that have already occurred, 
+	and if an element has occurred, we can add it to a new set.
+</p>
+<pre><code>def repeats(L):
+    seen = set()
+    seenAgain = set()
+    for element in L:
+        if (element in seen):
+            seenAgain.add(element)
+        seen.add(element)
+	return sorted(seenAgain) # sorts results
+print(repeats([1,1,1,3,4,6,2,4,1,5]))
+</code></pre>
 
-									<hr class="major" />
+<hr class="major" />
+<h2>Dictionaries</h2>
+<p>Python dictionaries are very similar to actual dictionaries. 
+	Each entry, known as a key, maps to a specific value. 
+	Keys are stored like in a set--they must be immutable, and 
+	end up being unique and unordered--but values can be anything.
+</p>
+<p>For instance, we can create a dictionary of political connections. 
+</p>
+<pre><code># two ways to create an empty dictionary
+D = dict()
+D = {} 
+# two ways to initialize dictionaries with set values
+D = {"Trump": set(["Putin", "Merkel"]), "Xi": set(["Abe", "Chung"])}
+D = dict([("Trump": set(["Putin", "Merkel"])), ("Xi": set(["Abe", "Chung"]))])
+D["Merkel"] = set(["Trump", "Putin", "Xi"])      # this adds an entry to the dictionary if the entry doesn't already exist
+D["Trump"] = set(["Putin", "Merkel", "Trudeau"]) # if the key already exists, this changes its value
+print("Merkel" in D)                             # True
+del D["Merkel"]                                  # deletes key if it exists; crashes otherwise
+print("Merkel" in D)                             # False
+for key in D:
+	print(key, D[key])
+</code></pre>
+<p>Suppose now we want to create a dictionary of connections of connections. 
+	For example, Trump is connected with Trudeau and Putin, who are connected 
+	with Merkel, Xi, and Trump. We want a new dictionary where the key of Trump 
+	maps to a set containing Merkel and Xi.
+</p>
+<pre><code>D = dict()
+D["Trump"] = set(["Trudeau", "Putin"])
+D["Putin"] = set(["Trump", "Merkel", "Xi"])
+D["Trudeau"] = set(["Trump"])
+D["Merkel"] = set(["Putin", "Kim"])
+D["Kim"] = set(["Merkel", "Xi"])
+D["Xi"] = set(["Putin", "Kim", "Merkel"])
+D["Snowden"] = set()
 
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-
+def connections(D): 				# returns dictionary of connections of connections
+	result = dict()
+	for key in D:
+		res = set()
+		cons = D[key]
+		for person in cons:
+			res.union(D[person])    # this joins the two sets
+		if key in res: res.remove(key)  # the current person cannot be his/her connection of a connection
+		result[key] = res
+	return result
+print(connections(D))
+</code></pre>
+<p>Since the values in dictionaries are mutable, we can also directly modify them. 
+	Let's say we have a list of people and want to make a dictionary mapping their names 
+	to the number of times they show up in the list:
+</p>
+<pre><code>def appearances(L):
+	D = dict()
+	for name in L:
+		if name in D:
+			D[name] += 1 # if they're already in D, we just increment the number of times they've appeared
+		else:
+			D[name] = 1  # otherwise, this is our first time seeing their name, so we set the value to 1
+	return D
+L = ["Trump", "Trudeau", "Merkel", "Merkel", "Trump", "Trump"]
+print(appearances(L))
+</code></pre>
 								</section>
 
 						</div>
